# Rfi-RfQ-ENG

backend/: docker-compose.yml  pyproject.toml
backend/src/: app.py  app2.py
backend/src/backend/: ContentGeneratorTool.py  MT.py  add_class_to_data.py  add_obj_to_class.py  advisor.py  delet-obj.py  extract_doc.py  main_add_obj.py  search.py  searche_base.py  serchtool.py  stream.py  stremlittttt.py  template_manager_tool.py  testbase.py  testerlextracction.py  testfilter.py  testsearchtoll.py  testtemplate.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App2.css  App2.jsx  Ro.jsx  dashboard.jsx  g.html  homme.jsx  index.css  main.jsx
frontend/src/components/: ChatWindow.jsx  DocumentPreview.jsx  Filter.jsx  Header.jsx  InstructionInput.jsx  TemplateSelector.jsx  generation-card.jsx  main-content.jsx
